--- a/P1/P1/mainwindow.ui
+++ b/P1/P1/mainwindow.ui
@@ -182,10 +182,30 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QDoubleSpinBox" name="dsbNear"/>
+              <widget class="QDoubleSpinBox" name="dsbNear">
+               <property name="decimals">
+                <number>2</number>
+               </property>
+               <property name="maximum">
+                <double>100.000000000000000</double>
+               </property>
+               <property name="stepType">
+                <enum>QAbstractSpinBox::DefaultStepType</enum>
+               </property>
+               <property name="value">
+                <double>1.000000000000000</double>
+               </property>
+              </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QDoubleSpinBox" name="dsbFar"/>
+              <widget class="QDoubleSpinBox" name="dsbFar">
+               <property name="maximum">
+                <double>100.000000000000000</double>
+               </property>
+               <property name="value">
+                <double>90.000000000000000</double>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -211,10 +231,10 @@
                <number>10</number>
               </property>
               <property name="value">
-               <number>45</number>
+               <number>90</number>
               </property>
               <property name="sliderPosition">
-               <number>45</number>
+               <number>90</number>
               </property>
               <property name="orientation">
                <enum>Qt::Vertical</enum>
@@ -241,6 +261,9 @@
               </property>
               <property name="maximum">
                <number>180</number>
+              </property>
+              <property name="value">
+               <number>90</number>
               </property>
              </widget>
             </item>
