--- a/P1/P1/mainwindow.ui
+++ b/P1/P1/mainwindow.ui
@@ -137,6 +137,26 @@
                </property>
               </widget>
              </item>
+             <item row="0" column="0" colspan="2">
+              <widget class="QCheckBox" name="cbIsAnimated">
+               <property name="layoutDirection">
+                <enum>Qt::RightToLeft</enum>
+               </property>
+               <property name="text">
+                <string>Animated</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="0" colspan="2">
+              <widget class="QCheckBox" name="cbFixedCam">
+               <property name="layoutDirection">
+                <enum>Qt::RightToLeft</enum>
+               </property>
+               <property name="text">
+                <string>fixed Camera</string>
+               </property>
+              </widget>
+             </item>
             </layout>
            </item>
           </layout>
